--- a/server/package.json
+++ b/server/package.json
@@ -6,15 +6,19 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.ts",
+    "start2": "nodemon --exec npx tsx index.ts",
     "build": "tsc"
   },
   "author": "ranzak",
   "license": "ISC",
   "dependencies": {
+    "@xenova/transformers": "^2.17.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/node": "^22.13.10",
     "ts-node": "^10.9.2",
