--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,7 @@
   "author": "ranzak",
   "license": "ISC",
   "dependencies": {
-    "@xenova/transformers": "^2.17.2",
+    "@huggingface/transformers": "^3.4.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2"
