--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
   "author": "ranzak",
   "license": "ISC",
   "dependencies": {
+    "@pinia/nuxt": "^0.10.1",
     "nuxt": "^3.16.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
