--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
   "author": "ranzak",
   "license": "ISC",
   "dependencies": {
+    "@nuxtjs/i18n": "^9.4.0",
     "@pinia/nuxt": "^0.10.1",
     "nuxt": "^3.16.1",
     "vue": "^3.5.13",
