--- a/landing/package.json
+++ b/landing/package.json
@@ -13,6 +13,7 @@
   "author": "ranzak",
   "license": "ISC",
   "dependencies": {
+    "@nuxtjs/i18n": "^9.4.0",
     "nuxt": "^3.16.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
