feat: removed package-lock.json from git, added to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ node_modules
 
 # LANDING IGNORES
 landing/node_modules
+landing/package-lock.json
 landing/.output
 landing/.data
 landing/.nuxt
@@ -20,6 +21,7 @@ landing/!.env.example
 
 # APP IGNORES
 app/node_modules
+app/package-lock.json
 app/.output
 app/.data
 app/.nuxt
@@ -37,6 +39,7 @@ app/!.env.example
 
 # SERVER IGNORES
 server/node_modules
+server/package-lock.json
 server/.env
 server/.cache
 server/dist
