--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
   "author": "ranzak",
   "license": "ISC",
   "dependencies": {
+    "@capacitor/filesystem": "^7.0.1",
     "@nuxtjs/i18n": "^9.4.0",
     "@pinia/nuxt": "^0.10.1",
     "nuxt": "^3.16.1",
@@ -20,6 +21,7 @@
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@capacitor/cli": "^7.2.0",
     "sass": "^1.86.0"
   }
 }
