--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,8 @@
     "@huggingface/transformers": "^3.4.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "openai": "^4.94.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
