--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
     "@capacitor/android": "^7.2.0",
     "@capacitor/filesystem": "^7.0.1",
     "@capacitor/ios": "^7.2.0",
+    "@capacitor/share": "^7.0.1",
     "@nuxtjs/i18n": "^9.4.0",
     "@pinia/nuxt": "^0.10.1",
     "nuxt": "^3.16.1",
