--- a/app/package.json
+++ b/app/package.json
@@ -18,7 +18,8 @@
     "@capacitor/ios": "^7.2.0",
     "@capacitor/share": "^7.0.1",
     "@nuxtjs/i18n": "^9.4.0",
-    "@pinia/nuxt": "^0.10.1",
+    "@pinia/nuxt": "^0.11.0",
+    "marked": "^15.0.8",
     "nuxt": "^3.16.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
