--- a/server/package.json
+++ b/server/package.json
@@ -1,12 +1,11 @@
 {
   "name": "server",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "The server (backend) of Sanovise.",
   "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.ts",
-    "start2": "nodemon --exec npx tsx index.ts",
     "build": "tsc"
   },
   "author": "ranzak",
@@ -14,6 +13,7 @@
   "dependencies": {
     "@huggingface/transformers": "^3.6.0",
     "cors": "^2.8.5",
+    "discord-webhook-node": "^1.1.8",
     "dotenv": "^16.6.0",
     "express": "^5.1.0",
     "openai": "^5.8.1"
